Cambiar estilo cambiar_password.html

--- a/templates/cambiar_password.html
+++ b/templates/cambiar_password.html
@@ -22,6 +22,7 @@
         </div>
 
         <form method="POST">
+
             <div class="my-3 p-3 bg-body rounded shadow-sm">
                 {% for message in get_flashed_messages() %}
                     <div class="alert alert-secondary alert-dismissible fade show" role="alert">
@@ -29,30 +30,35 @@
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
                 {% endfor %}
-                <div class="col-md-8">
+                <div class="mb-3">
                     <label for="old_password" class="form-label">Introduzca su antigua contraseña:</label>
                     <input type="password" class="form-control" id="old_password" name="old_password"
                            value="">
 
                 </div>
                 <hr class="my-4">
-                <div class="col-md-8">
+                <div class="mb-3">
                     <label for="new_password1" class="form-label">Introduzca su nueva contraseña:</label>
                     <input type="password" class="form-control" id="new_password1" name="new_password1"
                            value="">
 
                 </div>
-                <div class="col-md-8">
+                <div class="mb-3">
                     <label for="new_password2" class="form-label">Confirme su nueva contraseña:</label>
                     <input type="password" class="form-control" id="new_password2" name="new_password2"
                            value="">
 
                 </div>
 
+                <hr class="my-4">
+
+
+                <p align="right"><button class="cambiarPassword" type="submit" style=" margin-top: -1px;">Cambiar contraseña</button></p>
+
 
 
             </div>
-            <p align="right"><button class="btn btn-lg btn-primary" type="submit" >Cambiar contraseña</button></p>
+            
         </form>
     </main>
 
