Modificar elimiar_cita.html provisional

--- a/templates/informacion_cita.html
+++ b/templates/informacion_cita.html
@@ -215,7 +215,7 @@
                         {% if fecha_actual < dicc_cita['fecha_hora'] %}
                             <a class="btn btn-lg btn-primary" href="/eliminar_cita/{{ dicc_cita['id_cita'] }}">Eliminar
                                 cita</a>
-                            <a class="btn btn-lg btn-primary" href="/modificar_cita/{{ dicc_cita['id_cita'] }}">Editar
+                            <a Type="button" class="btn btn-lg btn-primary" href="/modificar_cita/{{ dicc_cita['id_cita'] }}">Editar
                             cita</a>
                         {% endif %}
 
