--- a/templates/eliminar_cita.html
+++ b/templates/eliminar_cita.html
@@ -2,15 +2,20 @@
 {% block title %}Eliminar cita{% endblock %}
 
 {% block body %}
-    <!doctype html>
-    <html lang="en">
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Custom styles for this template -->
+    <link href="/static/css/eliminar_cita.css" rel="stylesheet">
+</head>
 
 
-    <body>
+<body>
 
 
     <main class="d-flex flex-nowrap"
-          style="display: flex; justify-content: center; align-items: center; margin-top: 2%">
+        style="display: flex; justify-content: center; align-items: center; margin-top: 2%">
 
 
         <!--<div class="b-example-divider b-example-vr" style="margin-top: 4%;"></div>-->
@@ -18,11 +23,11 @@
 
         <div class="col-md-7 col-lg-8" style="margin-top: 10%">
             <form class="needs-validation" method="POST" novalidate>
-                <div class="row g-3" style="padding-left: 7%; padding-top: 0%; margin-top: -9%;">
-                    <h2>¿Seguro que quieres eliminar esta cita? Esto no se podrá deshacer</h2>
+                <div class="row g-3 ">
+                    <h2 style="text-align: center;">¿Seguro que quieres eliminar esta cita? Esto no se podrá deshacer</h2>
 
-                    <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm"
-                         style="background-color:  #7CB8EB">
+                    <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm marco-azul"
+                        style="background-color:  #7CB8EB">
                         <img class="me-3" src="/static/images/calendario_fecha_cita.png" alt="" width="48" height="48">
                         <div class="lh-1">
                             <h1 class="h6 mb-0 text-white lh-1">Cita de {{ dicc_cita['nombre_cliente'] }}</h1>
@@ -35,8 +40,8 @@
                     <div class="col-md-6">
                         <label for="nombre_cliente" class="form-label">Nombre de cliente</label>
                         <input type="text" class="form-control" id="nombre_cliente"
-                               value="{{ dicc_cita['nombre_cliente'] }} {{ dicc_cita['apellido1_cliente'] }} {{ dicc_cita['apellido2_cliente'] }}"
-                               readonly>
+                            value="{{ dicc_cita['nombre_cliente'] }} {{ dicc_cita['apellido1_cliente'] }} {{ dicc_cita['apellido2_cliente'] }}"
+                            readonly>
                     </div>
 
                     <div class="col-md-6">
@@ -47,8 +52,7 @@
 
                     <div class="col-md-4">
                         <label for="fecha" class="form-label">Fecha</label>
-                        <input type="text" class="form-control" id="fecha" value="{{ dicc_cita['fecha'] }}"
-                               readonly>
+                        <input type="text" class="form-control" id="fecha" value="{{ dicc_cita['fecha'] }}" readonly>
                         <div class="invalid-feedback">
                             Ingrese una fecha
                         </div>
@@ -56,16 +60,14 @@
 
                     <div class="col-md-4">
                         <label for="hora" class="form-label">Hora (24h)</label>
-                        <input type="text" class="form-control" id="hora" value="{{ dicc_cita['hora'] }}"
-                               readonly>
+                        <input type="text" class="form-control" id="hora" value="{{ dicc_cita['hora'] }}" readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
                     </div>
                     <div class="col-md-4">
                         <label for="hora" class="form-label">Hora de termino(24h)</label>
-                        <input type="text" class="form-control" id="hora" value="{{ dicc_cita['hora_fin'] }}"
-                               readonly>
+                        <input type="text" class="form-control" id="hora" value="{{ dicc_cita['hora_fin'] }}" readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
@@ -73,7 +75,7 @@
                     <div class="col-md-6">
                         <label for="hora" class="form-label">Nombre de sucursal</label>
                         <input type="text" class="form-control" id="hora" value="{{ dicc_cita['nombre_sucursal'] }}"
-                               readonly>
+                            readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
@@ -81,7 +83,7 @@
                     <div class="col-md-6">
                         <label for="hora" class="form-label">Dirección</label>
                         <input type="text" class="form-control" id="hora" value="{{ dicc_cita['direccion_sucursal'] }}"
-                               readonly>
+                            readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
@@ -90,15 +92,15 @@
                     <h4 class="border-bottom pb-2 mb-0">Servicios a realizar</h4>
                     <table class="table table-striped table-hover">
                         <thead>
-                        <tr>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Descripción</th>
-                            <th scope="col">Estilista</th>
-                            <th scope="col">Precio</th>
-                        </tr>
+                            <tr>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Descripción</th>
+                                <th scope="col">Estilista</th>
+                                <th scope="col">Precio</th>
+                            </tr>
                         </thead>
                         <tbody>
-                        {% for servicio in dicc_cita['lista_servicios'] %}
+                            {% for servicio in dicc_cita['lista_servicios'] %}
                             <tr>
                                 <th scope="row">{{ servicio['nombre_servicio'] }}</th>
                                 <td>{{ servicio['descripcion'] }}</td>
@@ -107,7 +109,7 @@
                                 <td>${{ servicio['precio'] }}</td>
                             </tr>
 
-                        {% endfor %}
+                            {% endfor %}
 
                         </tbody>
 
@@ -115,23 +117,21 @@
                     <div class="col-md-4">
                         <label for="subtotal" class="form-label">Subtotal</label>
                         <input type="number" class="form-control" id="subtotal" value="{{ dicc_cita['monto'] }}"
-                               readonly>
+                            readonly>
                         <div class="invalid-feedback">
 
                         </div>
                     </div>
                     <div class="col-md-4">
                         <label for="iva" class="form-label">IVA</label>
-                        <input type="number" class="form-control" id="iva" value="{{ dicc_cita['iva'] }}"
-                               readonly>
+                        <input type="number" class="form-control" id="iva" value="{{ dicc_cita['iva'] }}" readonly>
                         <div class="invalid-feedback">
 
                         </div>
                     </div>
                     <div class="col-md-4">
                         <label for="total" class="form-label">Total a pagar</label>
-                        <input type="number" class="form-control" id="total" value="{{ dicc_cita['total'] }}"
-                               readonly>
+                        <input type="number" class="form-control" id="total" value="{{ dicc_cita['total'] }}" readonly>
                         <div class="invalid-feedback">
                             hora requerida.
                         </div>
@@ -139,9 +139,9 @@
 
                     <hr>
                     <div style="display: flex; justify-content: space-between; padding-bottom: 3rem">
-                        <a class="btn btn-lg btn-primary"
-                           href="/informacion_cita/{{ dicc_cita['id_cita'] }}">Cancelar</a>
-                        <button class="btn btn-lg btn-primary" type="submit">Eliminar cita</button>
+                        <a class="btn-cancelar"
+                            href="/informacion_cita/{{ dicc_cita['id_cita'] }}">Cancelar</a>
+                        <button class="eliminar" type="submit">Eliminar cita</button>
                     </div>
 
 
@@ -151,12 +151,12 @@
 
     </main>
     <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 
     {#
     <script src="sidebars.js"></script>#}
-    </body>
+</body>
 
-    </html>
+</html>
 {% endblock %}
