Agregar productos_venta.html

--- a/static/css/error.css
+++ b/static/css/error.css
@@ -11,3 +11,24 @@ body {
     
  
 }
+
+a.btn-agendar {
+
+  color: #fff;
+  padding: 14px 64px;
+  margin: 32px auto;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
+  background: linear-gradient(-135deg, rgb(81, 148, 196) 35%, rgb(158, 210, 255) 100%);
+  cursor: pointer;
+  transition: opacity 0.4s;
+  border-radius: 30px;
+  text-decoration:none;
+}
+
+a.btn-agendar:hover {
+  opacity: 0.8;
+  text-decoration:none;
+  color: #FFF;
+}
