--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -111,7 +111,7 @@
           <h2 class="fw-normal">Productos en venta</h2>
           <p>En True Beauy nos preocupamos por el cuidado cosmético de nuestros clientes, por lo que contamos con una
             sección de venta de productos de calidad y accesibles</p>
-          <p><a class="btn btn-secondary" style="border-radius: 30px;" href="/reparacion">Comprar &raquo;</a></p>
+          <p><a class="btn btn-secondary" style="border-radius: 30px;" href="/productos_en_venta">Comprar &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
