--- a/templates/productos_venta.html
+++ b/templates/productos_venta.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}Error{% endblock %}
+{% block title %}Productos en venta{% endblock %}
 
 {% block body %}
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
 
 <head>
     <meta charset="utf-8">
@@ -11,16 +11,15 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.104.2">
-    <title>Jumbotron example · Bootstrap v5.2</title>
+    <title>Cover Template · Bootstrap v5.2</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/jumbotron/">
-
-
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
 
 
 
-    <link href="/static/css/error.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+
+    <link rel="stylesheet" href="/static/css/productos_venta.css">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/docs/5.2/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -86,33 +85,36 @@
     </style>
 
 
+    <!-- Custom styles for this template -->
+    <link href="cover.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="d-flex h-100 text-center text-bg-dark">
 
-    <main style="margin-top: 9%;">
-        <div class="container py-4" style="margin-top: 0%;">
-            <header class="pb-3 mb-4 border-bottom">
-                <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-                    <img class="me-3" src="/static/images/error.png" alt="" width="48" height="48">
-                    <span class="fs-4">Error</span>
-                </a>
-            </header>
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <header class="mb-auto">
+        </header>
 
-            <div class="p-5 mb-4 bg-light rounded-3">
-                <div class="container-fluid py-5">
-                    <h1 class="display-5 fw-bold">Algo ocurrió</h1>
-                    <p class="col-md-8 fs-4">Un error en especifico va aquí.</p>
+        <section class="side">
+            <img src="/static/images/undraw_developer_activity_re_39tg.svg" alt="">
+        </section>
 
-                    <a type="button" class="btn btn-lg btn-primary" href="/#" role="button">Ir a inicio &raquo;</a>
-                </div>
+        <section class="main">
+            <div class="login-container">
+
+                <h1>NO DISPONIBLE</h1>
+                <p class="lead">Aún no contamos con la tienda en línea. True Beauty ofrece sus productos a todos sus clientes en cualquier sucursal, acude a ellas y encuentra todo lo que necesites.</p>
+                <p class="lead">
+                    <a href="/#" Type="button" class="btn btn-inicio">Ir a inicio</a>
+                </p>
+
             </div>
+        </section>
 
-            <footer class="pt-3 mt-4 text-muted border-top">
-                &copy; 2022
-            </footer>
-        </div>
-    </main>
+        <footer class="mt-auto text-white-50">
+            <p>&copy; 2017–2022 True Beauty, Inc.</p>
+        </footer>
+    </div>
 
 
 
