Cambiar inicio.html

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -102,7 +102,7 @@
           <p>Echa un vistazo a todo lo que puedes obtener siendo cliente de True Beauty. Desde cortes de cabello hasta
             masajes faciales, todo en nuestras instalaciones
           </p>
-          <p><a class="btn btn-secondary" style="border-radius: 30px;" href="/servicios">Conocer servicios &raquo;</a>
+          <p><a class="btn btn-secondary" style="border-radius: 30px;" href="/consultar_servicios">Conocer servicios &raquo;</a>
           </p>
         </div><!-- /.col-lg-4 -->
 
