--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@
 
                     </div>
 
-                    <div class="offcanvas-body">
+                    <div class="offcanvas-body" style="text-align: initial;">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             {% if accesos %}
                                 {% for link,nombre in accesos.items() %}
