--- a/templates/consultar_clientes.html
+++ b/templates/consultar_clientes.html
@@ -23,10 +23,11 @@
 
 
         <div class="my-3 p-3 bg-body rounded shadow-sm">
-        <h5>{{ get_flashed_messages()[0] }}</h5>
+            <h5>{{ get_flashed_messages()[0] }}</h5>
             <h6 class="border-bottom pb-2 mb-0">Clientes</h6>
-<div class="col-auto mb-3 ">
-                <input class="form-control" type="text" id="searchbox" onkeyup="buscarCliente( 'searchbox', 'clientes') " placeholder="Buscar cliente... ">
+            <div class="col-auto mb-3 ">
+                <input class="form-control" type="text" id="searchbox"
+                    onkeyup="buscarCliente( 'searchbox', 'clientes') " placeholder="Buscar cliente... ">
             </div>
 
             <table id="clientes" class="table table-striped table-hover">
@@ -35,21 +36,24 @@
                         <th scope="col">Nombre</th>
                         <th scope="col">Correo</th>
                         <th scope="col">Teléfono</th>
-                        <th scope="col" >Agendarle cita</th>
-                        <th scope="col" >Ver cliente</th>
+                        <th scope="col">Agendarle cita</th>
+                        <th scope="col">Ver cliente</th>
                     </tr>
                 </thead>
                 <tbody>
-                {% for cliente in lista_clientes %}
-                     <tr>
-                        <td scope="row">{{ cliente['nombre'] }} {{ cliente['apellido_paterno'] }} {{ cliente['apellido_materno'] }}</td>
+                    {% for cliente in lista_clientes %}
+                    <tr>
+                        <td scope="row">{{ cliente['nombre'] }} {{ cliente['apellido_paterno'] }} {{
+                            cliente['apellido_materno'] }}</td>
                         <td>{{ cliente['correo'] }}</td>
                         <td>{{ cliente['telefono'] }}</td>
-                        <td><a href="/escoger_cita/{{ cliente['id_usuario'] }}" class="btn btn-primary btn-sm" >Agendar</a></td>
-                        <td><a href="/info_cuenta/{{ cliente['id_usuario'] }}" class="btn btn-primary btn-sm" >Detalles</a></td>
+                        <td><a href="/escoger_cita/{{ cliente['id_usuario'] }}"
+                                class="btn btn-primary btn-sm">Agendar</a></td>
+                        <td><a href="/info_cuenta/{{ cliente['id_usuario'] }}"
+                                class="btn btn-primary btn-sm">Detalles</a></td>
                     </tr>
 
-                {% endfor %}
+                    {% endfor %}
 
                 </tbody>
 
@@ -57,7 +61,7 @@
 
 
             <small class="d-block text-end mt-3">
-                <a href="/#" class="btn btn-primary btn-sm">Agregar nuevo usuario</a>
+                <a href="/registrar_usuario" class="btn btn-primary btn-sm">Agregar nuevo usuario</a>
             </small>
         </div>
 
@@ -69,39 +73,37 @@
 
     <script>
         function buscarCliente(id, table_id) {
-    // Declare variables
-    var input, filter, table, tr, td, i, txtValue, j, count, tamanio;
-    input = document.getElementById(id);
-    filter = input.value.toLowerCase();
-    table = document.getElementById(table_id);
-    tr = table.getElementsByTagName("tr");
-    // Loop through all table rows, and hide those who don't match the search query
-    for (i = 0; i < tr.length; i++) {
-        count = 0;
-        tamanio = tr[i].getElementsByTagName("td").length - 2;
-        for (j = 0; j < tamanio; j++) {
-            td = tr[i].getElementsByTagName("td")[j];
+            // Declare variables
+            var input, filter, table, tr, td, i, txtValue, j, count, tamanio;
+            input = document.getElementById(id);
+            filter = input.value.toLowerCase();
+            table = document.getElementById(table_id);
+            tr = table.getElementsByTagName("tr");
+            // Loop through all table rows, and hide those who don't match the search query
+            for (i = 0; i < tr.length; i++) {
+                count = 0;
+                tamanio = tr[i].getElementsByTagName("td").length - 2;
+                for (j = 0; j < tamanio; j++) {
+                    td = tr[i].getElementsByTagName("td")[j];
 
-            if (td) {
-                txtValue = td.textContent.toLowerCase() || td.innerText.toLowerCase();
-                if (txtValue.toLowerCase().indexOf(filter) > -1) {
-                    // tr[i].style.display = "";
-                } else {
-                    count++;
-                    // tr[i].style.display = "none";
+                    if (td) {
+                        txtValue = td.textContent.toLowerCase() || td.innerText.toLowerCase();
+                        if (txtValue.toLowerCase().indexOf(filter) > -1) {
+                            // tr[i].style.display = "";
+                        } else {
+                            count++;
+                            // tr[i].style.display = "none";
 
+                        }
+                    }
                 }
-
+                if (count === tamanio) {
+                    tr[i].style.display = "none";
+                } else {
+                    tr[i].style.display = "";
+                }
             }
-
         }
-        if (count === tamanio) {
-            tr[i].style.display = "none";
-        } else {
-            tr[i].style.display = "";
-        }
-    }
-}
     </script>
 </body>
 
