Cambiar reporte.html

--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -18,9 +18,9 @@
                 {{tipo}}
                 </button>
                         <ul class="dropdown-menu fade-down" aria-labelledby="dropdownMenuButton2">
-                            <li><a class="dropdown-item" href="/informe_ventas/diaria">Diario</a></li>
-                            <li><a class="dropdown-item" href="/informe_ventas/mensual">Mensual</a></li>
-                            <li><a class="dropdown-item" href="/informe_ventas/rango">Rango</a></li>
+                            <li><a class="dropdown-item" href="/informe_citas/diaria">Diario</a></li>
+                            <li><a class="dropdown-item" href="/informe_citas/mensual">Mensual</a></li>
+                            <li><a class="dropdown-item" href="/informe_citas/rango">Rango</a></li>
 
 
                         </ul>
