template new_password correción de errores

--- a/templates/reset_code.html
+++ b/templates/reset_code.html
@@ -6,7 +6,7 @@
 
 <head>
   <link rel="icon" href="/static/images/cleopatra.png">
-  <title>Cambiar contraseña</title>
+  <title>Reset code</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
       <p class="title">TRUE BEAUTY</p>
       <div class="separator"></div>
       <h5 class="recover_password">Verificación de código</h5>
-      <p class="welcome-message">Ingrese el código que llego a su correo para recuperar contraseña</p>
+      <p class="welcome-message">Ingrese el código que llego a su correo para continuar</p>
 
       {% for message in get_flashed_messages() %}
       <div class="alert alert-secondary alert-dismissible fade show" role="alert">
