--- a/templates/consultar_citas.html
+++ b/templates/consultar_citas.html
@@ -49,7 +49,7 @@
       {% endfor %}
 
       <small class="d-block text-end mt-3">
-        <a href="/escoger_cita/" type="button" class="btn-agendar">Agendar cita nueva</a>
+        <a href="/escoger_cita/" type="button" class="generico">Agendar cita nueva</a>
       </small>
     </div>
   </main>
