--- a/templates/informacion_cita.html
+++ b/templates/informacion_cita.html
@@ -14,6 +14,16 @@
 
 <body>
 
+    <body class="bg-light">
+
+       
+      
+        <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+          crossorigin="anonymous"></script>
+      
+        <script src="offcanvas.js"></script>
+      </body>
 
 
     <main class="d-flex flex-nowrap">
@@ -105,7 +115,7 @@
                 <div class="row g-3" style="padding-left: 7%; padding-top: 0%; margin-top: -9%;">
 
                     <div class="d-flex align-items-center p-3 my-3 text-white bg-purple rounded shadow-sm"
-                        style="background-color:  #7CB8EB">
+                        style="background: linear-gradient(-135deg, rgb(81, 148, 196) 35%, rgb(158, 210, 255) 100%);">
                         <img class="me-3" src="/static/images/calendario_fecha_cita.png" alt="" width="48" height="48">
                         <div class="lh-1">
                             <h1 class="h6 mb-0 text-white lh-1">Cita en {{ dicc_cita['nombre_sucursal'] }}</h1>
