--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -13,7 +13,7 @@
 
 
     <link href="/static/css/servicios.css" rel="stylesheet">
-    
+
 
 
     <!-- Favicons -->
@@ -47,9 +47,9 @@
             border: solid rgba(0, 0, 0, .15);
             border-width: 1px 0;
             box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-        }80
+        }
 
-        .b-example-vr {
+        80 .b-example-vr {
             flex-shrink: 0;
             width: 1.5rem;
             height: 100vh;
@@ -87,14 +87,15 @@
 
     <main>
 
-        <section class="py-5 text-center container" >
-            <div class="row py-lg-5" style="margin-top: 30px;" >
-                <div class="col-lg-6 col-md-8 mx-auto" >
+        <section class="py-5 text-center container">
+            <div class="row py-lg-5" style="margin-top: 30px;">
+                <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Bienvenido a la sección de servicios</h1>
-                    <p class="lead text-muted">En este apartado pondrás conocer los diferentes trabajos que se brindan en True Beauty y sus características.</p>
+                    <p class="lead text-muted">En este apartado pondrás conocer los diferentes trabajos que se brindan
+                        en True Beauty y sus características.</p>
                     <p>
                         <a href="/escoger_cita" type="button" class="btn-servicio">Agendar cita</a>
-                
+
                     </p>
                 </div>
             </div>
@@ -106,19 +107,14 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img class="mb-4" src="/static/images/plancha-de-pelo.png" style="margin: 40px" alt="" width="auto" height=auto>
 
                             <div class="card-body">
                                 <h5 class="card-title" style="text-align: center;">PEINADO</h5>
-                                <p class="card-text">Difruta de todo tipo de peinados para cualquier ocasión. Sencillos, elegantes y a la moda.</p>
+                                <p class="card-text">Difruta de todo tipo de peinados para cualquier ocasión. Sencillos,
+                                    elegantes y a la moda.</p>
                                 <div class="d-flex justify-content-between align-items-center">
-                                
+
                                     <small class="text-muted">Precio: $299.99 </small>
                                 </div>
                             </div>
@@ -126,17 +122,12 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img class="mb-4" src="/static/images/lapiz.png" style="margin: 40px" alt="" width="auto" height=auto>
 
                             <div class="card-body">
                                 <h5 class="card-title" style="text-align: center;">MAQUILLAJE</h5>
-                                <p class="card-text">Maquillajes para todo tipo de pieles, seleccionados con los colores y texturas precisas para cada cliente.</p>
+                                <p class="card-text">Maquillajes para todo tipo de pieles, seleccionados con los colores
+                                    y texturas precisas para cada cliente.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Precio $499.99</small>
                                 </div>
@@ -145,17 +136,12 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img class="mb-4" src="/static/images/tratamiento-facial.png" style="margin: 40px" alt="" width="auto" height=auto>
 
                             <div class="card-body">
                                 <h5 class="card-title" style="text-align: center;">FACIAL</h5>
-                                <p class="card-text">Facial con todos los productos especializados en cada persona. Para una mejor piel, tersa y hermosa.</p>
+                                <p class="card-text">Facial con todos los productos especializados en cada persona. Para
+                                    una mejor piel, tersa y hermosa.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Precio $1499.99</small>
                                 </div>
@@ -165,17 +151,12 @@
 
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img class="mb-4" src="/static/images/corte-de-pelo (1).png" style="margin: 40px" alt="" width="auto" height=auto>
 
                             <div class="card-body">
                                 <h5 class="card-title" style="text-align: center;">CORTE DE CABELLO</h5>
-                                <p class="card-text">Intenta un nuevo look con los distintos tipos de cortes que True Beauty puede hacer para tí.</p>
+                                <p class="card-text">Intenta un nuevo look con los distintos tipos de cortes que True
+                                    Beauty puede hacer para tí.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Precio $299.99</small>
                                 </div>
@@ -184,17 +165,12 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+                            <img class="mb-4" src="/static/images/soltar.png" style="margin: 40px" alt="" width="auto" height=auto>
 
                             <div class="card-body">
                                 <h5 class="card-title" style="text-align: center;">MANICURA</h5>
-                                <p class="card-text">Cuida tus manos y mantenlas bellas y hermosas. Trae el diseño que gustes y True Beauty lo hará realidad para tí.</p>
+                                <p class="card-text">Cuida tus manos y mantenlas bellas y hermosas. Trae el diseño que
+                                    gustes y True Beauty lo hará realidad para tí.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Precio $999.99</small>
                                 </div>
@@ -203,17 +179,13 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                                    dy=".3em">Thumbnail</text>
-                            </svg>
+
+                            <img class="mb-4" src="/static/images/depilacion.png" style="margin: 40px" alt="" width="auto" height=auto>
 
                             <div class="card-body">
                                 <h5 class="card-title" style="text-align: center;">PEDICURA</h5>
-                                <p class="card-text">Tus pies y su cuidado son muy importantes para tu belleza, mantenlos limpios y estéticos con los servicios de True Beauty.</p>
+                                <p class="card-text">Tus pies y su cuidado son muy importantes para tu belleza,
+                                    mantenlos limpios y estéticos con los servicios de True Beauty.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <small class="text-muted">Precio $999.99</small>
                                 </div>
