--- a/static/css/consultar_cita.css
+++ b/static/css/consultar_cita.css
@@ -127,3 +127,39 @@ button.cambiarPassword:hover {
   opacity: 0.8!important;
 }
 
+button.generico {
+  color: #fff;
+  padding: 14px 64px;
+  margin: 32px auto;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
+  background: linear-gradient(-135deg, rgb(81, 148, 196) 35%, rgb(158, 210, 255) 100%);
+  cursor: pointer;
+  transition: opacity 0.4s;
+  border-radius: 30px;
+}
+
+button.generico:hover {
+  opacity: 0.8;
+}
+
+a.generico {
+  color: #fff;
+  padding: 14px 64px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: bold;
+  background: linear-gradient(-135deg, rgb(81, 148, 196) 35%, rgb(158, 210, 255) 100%);
+  cursor: pointer;
+  transition: opacity 0.4s;
+  border-radius: 30px;
+  text-decoration: none;
+}
+
+a.generico:hover {
+  color: #FFF;
+  opacity: 0.8;
+}
+
+
