--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,17 +9,11 @@
     </link>
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Montserrat'>
     </link>
-    {% for message in get_flashed_messages() %}
-        <div class="alert alert-secondary alert-dismissible fade show" role="alert">
-          {{message}}
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        {% endfor %}
+    
 </head>
 
 <body>
     <div class="container">
-        
         
         <div class="title">Registrarse en TrueBeauty</div>
         <form method="POST">
@@ -61,7 +55,13 @@
                 </div>
             </div>
 
-            
+            {% for message in get_flashed_messages() %}
+            <div id="alerta" class="alert alert-secondary alert-dismissible fade show" role="alert">
+                {{message}}
+                <button  type="button" onclick="cerrarAlerta()" class="btn-close" data-bs-dismiss="alert" aria-label="Close"> X</button>
+            </div>
+
+            {% endfor %}
 
             <div class="button">
                 <input type="submit" value="Registrarse">
